# EPS-Discord-Bots

./: admin.txt  commands.json  embeds.pkl  helps.py  languages  m.py  main.py  perms  ported.pkl  pyproject.toml  servers.pkl  serversett.py  therules.py  tools.py
Archive/: help.py  main.py
